--- a/resources/views/artists/create.edge
+++ b/resources/views/artists/create.edge
@@ -7,6 +7,12 @@
   <form class="space-y-6" action="{{ route('artists.store') }}" method="post">
     <h5 class="text-xl font-medium text-gray-900 dark:text-white">Create artist</h5>
     @!input({
+    name: 'name',
+    type: 'text',
+    label: 'Artist name',
+    required: true
+    })
+    @!input({
     name: 'mastoAccessToken',
     type: 'text',
     label: 'Mastodon access token',
