--- a/resources/views/artists/show.edge
+++ b/resources/views/artists/show.edge
@@ -10,7 +10,7 @@
     </a>
     <div class="p-5">
       <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-        {{ mastodon.displayName }}
+        {{ artist.name }}
       </h5>
       <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
         {{ mastodon.source.note }}
@@ -41,136 +41,161 @@
         <span class="p-2 mr-2 text-white rounded-full bg-slate-400">{{ tag.name }}</span>
         @endeach
       </div>
+      <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+      <form class="space-y-6" action="{{ route('artists.toot', [artist.id]) }}" method="post">
+        @!button({
+        type: 'submit',
+        label: 'Force toot!'
+        })
+      </form>
     </div>
   </div>
 
-  <div class="relative overflow-x-auto shadow-md h-max grow sm:rounded-lg">
-    <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-      <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-        <tr>
-          <th scope="col" class="hidden px-6 py-3">
-            #
-          </th>
-          <th scope="col" class="px-6 py-3">
-            Image
-          </th>
-          <th scope="col" class="px-6 py-3">
-            Title
-          </th>
-          <th scope="col" class="px-6 py-3">
-            Completition Year
-          </th>
-          <th scope="col" class="px-6 py-3">
-            Tags
-          </th>
-          <th scope="col" class="px-6 py-3">
-            Sensitive?
-          </th>
-          <th scope="col" class="px-6 py-3">
-            Last posted
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        @each(painting in paintings)
-        <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-          <td class="hidden px-6 py-4">
-            {{ painting.id }}
-          </td>
-          <td class="px-6 py-4">
-            <img class="w-12 h-12 rounded-lg" src="{{ painting.imageUrl }}" />
-          </td>
-          <th scope="row" class="px-6 py-4 overflow-hidden font-medium text-gray-900 dark:text-white">
-            {{ painting.title }}
-          </th>
-          <td class="px-6 py-4">
-            {{ painting.completitionYear || 'Unknown' }}
-          </td>
-          <td class="px-6 py-4">
-            {{ painting.tags.map(tag => tag.name).join(', ') }}
-          </td>
-          <td class="px-6 py-4">
-            @if(painting.sensitive === true)
-            <span class="w-6 h-6 iconify" data-icon="mdi-alert"></span>
-            @elseif(painting.sensitive === false)
-            <span class="w-6 h-6 iconify" data-icon="mdi-teddy-bear"></span>
-            @else
-            Missing
-            @end
-          </td>
-          <td class="px-6 py-4">
-            {{ painting.postedAt || 'Never' }}
-          </td>
-        </tr>
-        @endeach
-      </tbody>
-    </table>
-    <nav class="flex items-center justify-between p-4" aria-label="Table navigation">
-      <span class="text-sm font-normal text-gray-500 dark:text-gray-400">Showing <span
-          class="font-semibold text-gray-900 dark:text-white">
-          {{ (paintings.currentPage - 1) * 10 + 1 }}-{{(paintings.currentPage) * 10 > paintings.total ? paintings.total
-          : (paintings.currentPage) * 10 }}</span> of
-        <span class="font-semibold text-gray-900 dark:text-white">{{ paintings.total }}</span></span>
-      <ul class="inline-flex items-center -space-x-px">
-        <li>
-          <a href="{{ paintings.getUrl(paintings.firstPage) }}"
-            class="block px-3 py-2 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-            <span class="sr-only">Previous</span>
-            <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-              xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd"
-                d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-                clip-rule="evenodd"></path>
-            </svg>
-          </a>
-        </li>
+  <div class="flex flex-col gap-4">
+    <div class="flex items-center gap-4">
+      @!missingsProgress({ ratio: missingRatio })
+      <a type="button" href="{{ route('missings.index', [artist.id]) }}" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Contribute</a>
+    </div>
+    <div class="relative overflow-x-auto shadow-md h-max grow sm:rounded-lg">
+      <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
+        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+          <tr>
+            <th scope="col" class="hidden px-6 py-3">
+              #
+            </th>
+            <th scope="col" class="px-6 py-3">
+              Image
+            </th>
+            <th scope="col" class="px-6 py-3">
+              Title
+            </th>
+            <th scope="col" class="px-6 py-3">
+              Completition Year
+            </th>
+            <th scope="col" class="px-6 py-3">
+              Tags
+            </th>
+            <th scope="col" class="px-6 py-3">
+              Content Warning
+            </th>
+            <th scope="col" class="px-6 py-3">
+              Banned
+            </th>
+            <th scope="col" class="px-6 py-3">
+              Reviewer
+            </th>
+            <th scope="col" class="px-6 py-3">
+              Last posted
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          @each(painting in paintings)
+          <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+            <td class="hidden px-6 py-4">
+              {{ painting.id }}
+            </td>
+            <td class="px-6 py-4">
+              <img class="w-12 h-12 rounded-lg" src="{{ painting.imageUrl }}" />
+            </td>
+            <th scope="row" class="px-6 py-4 overflow-hidden font-medium text-gray-900 dark:text-white">
+              {{ painting.title }}
+            </th>
+            <td class="px-6 py-4">
+              {{ painting.completitionYear || 'Unknown' }}
+            </td>
+            <td class="px-6 py-4">
+              {{ painting.tags.map(tag => tag.name).join(', ') }}
+            </td>
+            <td class="px-6 py-4">
+              {{ painting.contentWarning || '' }}
+            </td>
+            <td class="px-6 py-4">
+              @if(painting.banned === true)
+              <span class="w-6 h-6 iconify" data-icon="mdi-alert"></span>
+              @elseif(painting.banned === false)
+              <span class="w-6 h-6 iconify" data-icon="mdi-teddy-bear"></span>
+              @else
+              WTF
+              @end
+            </td>
+            <td class="px-6 py-4">
+              {{ painting.reviewer?.email || '' }}
+            </td>
+            <td class="px-6 py-4">
+              {{ painting.postedAt || 'Never' }}
+            </td>
+          </tr>
+          @endeach
+        </tbody>
+      </table>
+      <nav class="flex items-center justify-between p-4" aria-label="Table navigation">
+        <span class="text-sm font-normal text-gray-500 dark:text-gray-400">Showing <span
+            class="font-semibold text-gray-900 dark:text-white">
+            {{ (paintings.currentPage - 1) * 10 + 1 }}-{{(paintings.currentPage) * 10 > paintings.total ? paintings.total
+            : (paintings.currentPage) * 10 }}</span> of
+          <span class="font-semibold text-gray-900 dark:text-white">{{ paintings.total }}</span></span>
+        <ul class="inline-flex items-center -space-x-px">
+          <li>
+            <a href="{{ paintings.getUrl(paintings.firstPage) }}"
+              class="block px-3 py-2 ml-0 leading-tight text-gray-500 bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+              <span class="sr-only">Previous</span>
+              <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                  d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </a>
+          </li>
 
-        @if(paintings.currentPage >= paintings.firstPage + 2)
-        <li>
-          <span
-            class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-            {{'...'}}
-          </span>
-        </li>
-        @end
+          @if(paintings.currentPage >= paintings.firstPage + 2)
+          <li>
+            <span
+              class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+              {{'...'}}
+            </span>
+          </li>
+          @end
 
-        @set('rangeStart', paintings.firstPage > paintings.currentPage - 2 ? paintings.firstPage : paintings.currentPage
-        - 2)
-        @set('rangeEnd', paintings.currentPage + 2 > paintings.lastPage ? paintings.lastPage : paintings.currentPage +
-        2)
+          @set('rangeStart', paintings.firstPage > paintings.currentPage - 2 ? paintings.firstPage : paintings.currentPage
+          - 2)
+          @set('rangeEnd', paintings.currentPage + 2 > paintings.lastPage ? paintings.lastPage : paintings.currentPage +
+          2)
 
-        @each(anchor in paintings.getUrlsForRange(rangeStart, rangeEnd))
-        <li>
-          <a href="{{ anchor.url }}"
-            class="px-3 py-2 leading-tight border {{paintings.currentPage === anchor.page ? 'z-10 text-blue-600 border-blue-300 bg-blue-50 hover:bg-blue-100 hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white' :  'text-gray-500 bg-white border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white'}}">
-            {{ anchor.page }}
-          </a>
-        </li>
-        @endeach
+          @each(anchor in paintings.getUrlsForRange(rangeStart, rangeEnd))
+          <li>
+            <a href="{{ anchor.url }}"
+              class="px-3 py-2 leading-tight border {{paintings.currentPage === anchor.page ? 'z-10 text-blue-600 border-blue-300 bg-blue-50 hover:bg-blue-100 hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white' :  'text-gray-500 bg-white border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white'}}">
+              {{ anchor.page }}
+            </a>
+          </li>
+          @endeach
 
-        @if(paintings.lastPage - 2 > paintings.currentPage)
-        <li>
-          <span
-            class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-            {{'...'}}
-          </span>
-        </li>
-        @end
+          @if(paintings.lastPage - 2 > paintings.currentPage)
+          <li>
+            <span
+              class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+              {{'...'}}
+            </span>
+          </li>
+          @end
 
-        <li>
-          <a href="{{ paintings.getUrl(paintings.lastPage) }}"
-            class="block px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-            <span class="sr-only">Next</span>
-            <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-              xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd"
-                d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                clip-rule="evenodd"></path>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </nav>
+          <li>
+            <a href="{{ paintings.getUrl(paintings.lastPage) }}"
+              class="block px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+              <span class="sr-only">Next</span>
+              <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                  d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+                  clip-rule="evenodd"></path>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
 </div>
 @end
