--- a/resources/views/components/artist_card.edge
+++ b/resources/views/components/artist_card.edge
@@ -2,7 +2,7 @@
 <div class="flex flex-col gap-4">
   <div class="flex justify-between gap-4">
     <div>
-      <h2 class="text-xl">{{ artist.mastodon.displayName }}</h2>
+      <h2 class="text-xl">{{ artist.name }}</h2>
     </div>
     <div class="w-1/2">
       <img class="rounded-xl" src="{{ artist.mastodon.avatarStatic }}" />
