--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -1,8 +1,9 @@
 <nav
   class="bg-white px-2 sm:px-4 py-2.5 dark:bg-gray-900 w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 mb-8">
   <div class="container flex flex-wrap items-center justify-between mx-auto">
-    <a href="{{ route('index') }}" class="flex items-center">
+    <a href="{{ route('index') }}" class="flex items-end gap-2">
       <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Artbot</span>
+      <span>v{{version}}</span>
     </a>
     <div class="flex md:order-2">
       @if(auth.isLoggedIn)
