--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -11,6 +11,11 @@
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
         My Account
       </a>
+      @else
+      <a type="button" href="{{ route('auth.index') }}"
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+        Curator login
+      </a>
       @endif
       <button data-collapse-toggle="navbar-sticky" type="button"
         class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -25,6 +30,7 @@
       </button>
     </div>
     <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+      @if(auth.isLoggedIn)
       <ul
         class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
         <li>
@@ -36,7 +42,14 @@
           <a href="#"
             class="block py-2 pl-3 pr-4 rounded md:p-0 {{ (request.matchesRoute('TODO')) ? 'text-white bg-blue-700 md:bg-transparent md:text-blue-700 dark:text-white' : 'text-gray-700 hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700'}}">Status</a>
         </li>
+        @if(auth.user.isAdmin)
+          <li>
+            <a href="{{ route('users.index') }}"
+              class="block py-2 pl-3 pr-4 rounded md:p-0 {{ (request.matchesRoute('TODO')) ? 'text-white bg-blue-700 md:bg-transparent md:text-blue-700 dark:text-white' : 'text-gray-700 hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700'}}">Users</a>
+          </li>
+        @endif
       </ul>
+      @endif
     </div>
   </div>
 </nav>
