--- a/resources/views/artists/show.edge
+++ b/resources/views/artists/show.edge
@@ -41,13 +41,15 @@
         <span class="p-2 mr-2 text-white rounded-full bg-slate-400">{{ tag.name }}</span>
         @endeach
       </div>
-      <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
-      <form class="space-y-6" action="{{ route('artists.toot', [artist.id]) }}" method="post">
-        @!button({
-        type: 'submit',
-        label: 'Force toot!'
-        })
-      </form>
+      @can('ArtistPolicy.toot')
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700" />
+        <form class="space-y-6" action="{{ route('artists.toot', [artist.id]) }}" method="post">
+          @!button({
+          type: 'submit',
+          label: 'Force toot!'
+          })
+        </form>
+      @end
     </div>
   </div>
 
