--- a/resources/views/components/artist_card.edge
+++ b/resources/views/components/artist_card.edge
@@ -25,12 +25,14 @@
         class="focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-3 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
         <span class="w-6 h-6 iconify" data-icon="mdi-open-in-app"></span>
       </a>
-      <form action="{{ route('artists.destroy', [artist.id], { qs: { _method: 'DELETE' }}) }}" method="post">
-        <button type="submit"
-          class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-3 py-2.5 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">
-          <span class="w-6 h-6 iconify" data-icon="mdi-trash-can"></span>
-        </button>
-      </form>
+      @can('ArtistPolicy.delete')
+        <form action="{{ route('artists.destroy', [artist.id], { qs: { _method: 'DELETE' }}) }}" method="post">
+          <button type="submit"
+            class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-3 py-2.5 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">
+            <span class="w-6 h-6 iconify" data-icon="mdi-trash-can"></span>
+          </button>
+        </form>
+      @end
       <a href="{{ artist.mastodon.url }}" target="_blank"
         class="focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-3 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
         <span class="w-6 h-6 iconify" data-icon="mdi-mastodon"></span>
