--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -7,6 +7,7 @@
     @each(artist in artists)
       @card({ unlimitedWith: true })
         <iframe class="mastodon-timeline-embed" src="https://fo.llow.social/embed/{{ artist.mastodon.acct }}@tooting.ch?header=show&statuses=hide&pinned=hide&limit=5" style="width:100%;height:0px"></iframe>
+        <a rel="me" class="hidden" href="https://tooting.ch/@{{ artist.mastodon.acct }}">Mastodon</a>
       @end
     @end
   </div>
