--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -3,7 +3,7 @@
   <div class="container flex flex-wrap items-center justify-between mx-auto">
     <a href="{{ route('index') }}" class="flex items-end gap-2">
       <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Artbot</span>
-      <span>v{{version}}</span>
+      <span>v{{app.version}}</span>
     </a>
     <div class="flex md:order-2">
       @if(auth.isLoggedIn)
