--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -6,7 +6,7 @@
       <span>v{{app.version}}</span>
     </a>
     <div class="flex md:order-2">
-      @if(auth.isLoggedIn)
+      @if(auth.isAuthenticated)
       <a type="button" href="{{ route('users.show', [auth.user.id]) }}"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
         My Account
