--- a/resources/views/artists/show.edge
+++ b/resources/views/artists/show.edge
@@ -94,7 +94,7 @@
         <tbody>
           @each(painting in paintings)
           <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-            <td class="hidden px-6 py-4">
+            <td class="px-6 py-4">
               {{ painting.id }}
             </td>
             <td class="px-6 py-4">
