--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -5,11 +5,9 @@
   <h2 class="text-3xl mb-4">Your daily dose of art on Mastodon</h2>
   <div class="grid gap-4 grid-cols-1 md:grid-cols-2 xl:grid-cols-3">
     @each(artist in artists)
-      @card({ unlimitedWith: true })
-        <iframe class="mastodon-timeline-embed" src="https://fo.llow.social/embed/{{ artist.mastodon.acct + '@' + env('MASTODON_URL') }}?header=show&statuses=hide&pinned=hide&limit=5" style="width:100%;height:0px"></iframe>
-        <a rel="me" class="hidden" href="https://{{ env('MASTODON_URL') }}/{{ '@' + artist.mastodon.acct }}">Mastodon</a>
+      @card({ unlimitedWith: true, link: `https://${env('MASTODON_URL')}/${'@' + artist.mastodon.acct}` })
+        {{ artist.name }}
       @end
     @end
   </div>
-  <script src="https://fo.llow.social/embed.js" async></script>
 @end
