--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -7,6 +7,9 @@
   @entryPointStyles('app')
   @entryPointScripts('app')
   <script src="//code.iconify.design/1/1.0.6/iconify.min.js"></script>
+  <link rel="stylesheet" href="mastodon-timeline.css" />
+  <script src="mastodon-timeline.js"></script>
+
   <title>{{ title }} - Artbot</title>
 </head>
 
